--- a/Survey form/styles.css
+++ b/Survey form/styles.css
@@ -5,8 +5,14 @@ body{
 	font-family: sans-serif;
 	padding-bottom: 80px;
 }
+#head-id{
+	background-color: rgba(114, 89, 54, 0.8);
+	width: 800px;
+	margin: 0 auto;
+	padding-bottom: 5px;
+}
 #title{
-	padding-top: 20px;
+	padding-top: 35px;
 	font-size: 35px;
 }
 #description{
@@ -14,15 +20,14 @@ body{
 }
 #title, #description{
 	text-align: center;
-	color: rgb(92 74 47);
 }
 .container{
+	padding-top: 0;
 	background-color: rgba(114, 89, 54, 0.8);
 	width: 800px;
 	text-align: left;
 	margin: 0 auto;
 	padding-bottom: 20px;
-	border-radius: 8px;
 }
 fieldset{
 	padding: 10px 30px;
